--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ecommerce"]
 	path = ecommerce
 	url = https://github.com/pandc19/css-ecommerce.git
+[submodule "02-flexbox-basicos"]
+	path = 02-flexbox-basicos
+	url = https://github.com/pandc19/css-flexbox-basicos.git
